y.output

state 0
	$accept: .module $end 
	opt_body: .    (15)
	opt_directive: .    (7)

	':'  reduce 15 (src line 151)
	';'  reduce 15 (src line 151)
	Directive  shift 39
	Identifier  shift 43
	If  shift 22
	For  shift 23
	Break  shift 12
	Not  shift 19
	While  shift 24
	GoToLabel  shift 40
	Continue  shift 11
	Try  shift 25
	Number  shift 28
	String  shift 27
	New  shift 38
	Return  shift 14
	Throw  shift 13
	True  shift 31
	False  shift 32
	Undefind  shift 34
	Date  shift 33
	GoTo  shift 21
	Execute  shift 44
	BuiltinFunction  shift 45
	'+'  shift 30
	'-'  shift 29
	'('  shift 18
	'?'  shift 42
	.  reduce 7 (src line 119)

	body  goto 2
	opt_body  goto 5
	stmt  goto 4
	stmt_loop  goto 9
	funcProc  goto 16
	stmt_if  goto 8
	expr  goto 7
	opt_directive  goto 26
	simple_expr  goto 17
	through_dot  goto 36
	new_object  goto 20
	ternary  goto 37
	stmt_tryCatch  goto 10
	identifier  goto 41
	goToLabel  goto 35
	global_variables  goto 15
	module  goto 1
	main_items  goto 3
	main  goto 6

state 1
	$accept:  module.$end 

	$end  accept
	.  error


state 2
	module:  body.    (1)
	opt_body:  body.    (16)

	$end  reduce 1 (src line 92)
	.  reduce 16 (src line 152)


state 3
	module:  main_items.opt_body 
	main_items:  main_items.main 
	opt_body: .    (15)
	opt_directive: .    (7)

	Directive  shift 39
	Identifier  shift 43
	Procedure  reduce 7 (src line 119)
	Var  reduce 7 (src line 119)
	If  shift 22
	For  shift 23
	Break  shift 12
	Not  shift 19
	While  shift 24
	GoToLabel  shift 40
	Continue  shift 11
	Try  shift 25
	Number  shift 28
	String  shift 27
	New  shift 38
	Function  reduce 7 (src line 119)
	Return  shift 14
	Throw  shift 13
	True  shift 31
	False  shift 32
	Undefind  shift 34
	Date  shift 33
	GoTo  shift 21
	Execute  shift 44
	BuiltinFunction  shift 45
	'+'  shift 30
	'-'  shift 29
	'('  shift 18
	'?'  shift 42
	.  reduce 15 (src line 151)

	body  goto 48
	opt_body  goto 46
	stmt  goto 4
	stmt_loop  goto 9
	funcProc  goto 16
	stmt_if  goto 8
	expr  goto 7
	opt_directive  goto 26
	simple_expr  goto 17
	through_dot  goto 36
	new_object  goto 20
	ternary  goto 37
	stmt_tryCatch  goto 10
	identifier  goto 41
	goToLabel  goto 35
	global_variables  goto 15
	main  goto 47

state 4
	body:  stmt.    (17)

	.  reduce 17 (src line 156)


state 5
	body:  opt_body.separator opt_stmt 

	':'  shift 53
	';'  shift 52
	.  error

	separator  goto 49
	semicolon  goto 50
	colon  goto 51

state 6
	main_items:  main.    (3)

	.  reduce 3 (src line 103)


state 7
	stmt:  expr.    (42)
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	expr:  expr.'=' expr 
	expr:  expr.Or expr 
	expr:  expr.And expr 
	expr:  expr.NeEq expr 
	expr:  expr.Le expr 
	expr:  expr.Ge expr 

	NeEq  shift 64
	Le  shift 65
	Ge  shift 66
	Or  shift 62
	And  shift 63
	'='  shift 61
	'>'  shift 59
	'<'  shift 60
	'+'  shift 54
	'-'  shift 55
	'*'  shift 56
	'/'  shift 57
	'%'  shift 58
	.  reduce 42 (src line 262)


state 8
	stmt:  stmt_if.    (43)

	.  reduce 43 (src line 263)


state 9
	stmt:  stmt_loop.    (44)

	.  reduce 44 (src line 264)


state 10
	stmt:  stmt_tryCatch.    (45)

	.  reduce 45 (src line 265)


state 11
	stmt:  Continue.    (46)

	.  reduce 46 (src line 266)


state 12
	stmt:  Break.    (47)

	.  reduce 47 (src line 267)


state 13
	stmt:  Throw.opt_param 
	opt_param: .    (50)

	Identifier  shift 43
	Not  shift 19
	GoToLabel  shift 40
	Number  shift 28
	String  shift 27
	New  shift 38
	True  shift 31
	False  shift 32
	Undefind  shift 34
	Date  shift 33
	GoTo  shift 21
	Execute  shift 44
	BuiltinFunction  shift 45
	'+'  shift 30
	'-'  shift 29
	'('  shift 18
	'?'  shift 42
	.  reduce 50 (src line 272)

	opt_param  goto 67
	expr  goto 68
	simple_expr  goto 17
	through_dot  goto 36
	new_object  goto 20
	ternary  goto 37
	identifier  goto 41
	goToLabel  goto 35

state 14
	stmt:  Return.opt_expr 
	opt_expr: .    (82)

	Identifier  shift 43
	Not  shift 19
	GoToLabel  shift 40
	Number  shift 28
	String  shift 27
	New  shift 38
	True  shift 31
	False  shift 32
	Undefind  shift 34
	Date  shift 33
	GoTo  shift 21
	Execute  shift 44
	BuiltinFunction  shift 45
	'+'  shift 30
	'-'  shift 29
	'('  shift 18
	'?'  shift 42
	.  reduce 82 (src line 323)

	expr  goto 70
	simple_expr  goto 17
	opt_expr  goto 69
	through_dot  goto 36
	new_object  goto 20
	ternary  goto 37
	identifier  goto 41
	goToLabel  goto 35

state 15
	main:  global_variables.    (5)

	.  reduce 5 (src line 107)


state 16
	main:  funcProc.    (6)

	.  reduce 6 (src line 112)


state 17
	expr:  simple_expr.    (64)

	.  reduce 64 (src line 303)


state 18
	expr:  '('.expr ')' 

	Identifier  shift 43
	Not  shift 19
	GoToLabel  shift 40
	Number  shift 28
	String  shift 27
	New  shift 38
	True  shift 31
	False  shift 32
	Undefind  shift 34
	Date  shift 33
	GoTo  shift 21
	Execute  shift 44
	BuiltinFunction  shift 45
	'+'  shift 30
	'-'  shift 29
	'('  shift 18
	'?'  shift 42
	.  error

	expr  goto 71
	simple_expr  goto 17
	through_dot  goto 36
	new_object  goto 20
	ternary  goto 37
	identifier  goto 41
	goToLabel  goto 35

state 19
	expr:  Not.expr 

	Identifier  shift 43
	Not  shift 19
	GoToLabel  shift 40
	Number  shift 28
	String  shift 27
	New  shift 38
	True  shift 31
	False  shift 32
	Undefind  shift 34
	Date  shift 33
	GoTo  shift 21
	Execute  shift 44
	BuiltinFunction  shift 45
	'+'  shift 30
	'-'  shift 29
	'('  shift 18
	'?'  shift 42
	.  error

	expr  goto 72
	simple_expr  goto 17
	through_dot  goto 36
	new_object  goto 20
	ternary  goto 37
	identifier  goto 41
	goToLabel  goto 35

state 20
	expr:  new_object.    (80)

	.  reduce 80 (src line 319)


state 21
	expr:  GoTo.goToLabel 

	GoToLabel  shift 40
	.  error

	goToLabel  goto 73

state 22
	stmt_if:  If.expr Then opt_body opt_elseif_list opt_else EndIf 

	Identifier  shift 43
	Not  shift 19
	GoToLabel  shift 40
	Number  shift 28
	String  shift 27
	New  shift 38
	True  shift 31
	False  shift 32
	Undefind  shift 34
	Date  shift 33
	GoTo  shift 21
	Execute  shift 44
	BuiltinFunction  shift 45
	'+'  shift 30
	'-'  shift 29
	'('  shift 18
	'?'  shift 42
	.  error

	expr  goto 74
	simple_expr  goto 17
	through_dot  goto 36
	new_object  goto 20
	ternary  goto 37
	identifier  goto 41
	goToLabel  goto 35

state 23
	stmt_loop:  For.Each Identifier In loopExp Loop $$33 opt_body EndLoop 
	stmt_loop:  For.expr To expr Loop $$35 opt_body EndLoop 

	Identifier  shift 43
	Each  shift 75
	Not  shift 19
	GoToLabel  shift 40
	Number  shift 28
	String  shift 27
	New  shift 38
	True  shift 31
	False  shift 32
	Undefind  shift 34
	Date  shift 33
	GoTo  shift 21
	Execute  shift 44
	BuiltinFunction  shift 45
	'+'  shift 30
	'-'  shift 29
	'('  shift 18
	'?'  shift 42
	.  error

	expr  goto 76
	simple_expr  goto 17
	through_dot  goto 36
	new_object  goto 20
	ternary  goto 37
	identifier  goto 41
	goToLabel  goto 35

state 24
	stmt_loop:  While.expr Loop $$37 opt_body EndLoop 

	Identifier  shift 43
	Not  shift 19
	GoToLabel  shift 40
	Number  shift 28
	String  shift 27
	New  shift 38
	True  shift 31
	False  shift 32
	Undefind  shift 34
	Date  shift 33
	GoTo  shift 21
	Execute  shift 44
	BuiltinFunction  shift 45
	'+'  shift 30
	'-'  shift 29
	'('  shift 18
	'?'  shift 42
	.  error

	expr  goto 77
	simple_expr  goto 17
	through_dot  goto 36
	new_object  goto 20
	ternary  goto 37
	identifier  goto 41
	goToLabel  goto 35

state 25
	stmt_tryCatch:  Try.opt_body Catch $$62 opt_body EndTry 
	opt_body: .    (15)

	Identifier  shift 43
	If  shift 22
	For  shift 23
	Break  shift 12
	Not  shift 19
	While  shift 24
	GoToLabel  shift 40
	Continue  shift 11
	Try  shift 25
	Number  shift 28
	String  shift 27
	New  shift 38
	Return  shift 14
	Throw  shift 13
	True  shift 31
	False  shift 32
	Undefind  shift 34
	Date  shift 33
	GoTo  shift 21
	Execute  shift 44
	BuiltinFunction  shift 45
	'+'  shift 30
	'-'  shift 29
	'('  shift 18
	'?'  shift 42
	.  reduce 15 (src line 151)

	body  goto 48
	opt_body  goto 78
	stmt  goto 4
	stmt_loop  goto 9
	stmt_if  goto 8
	expr  goto 7
	simple_expr  goto 17
	through_dot  goto 36
	new_object  goto 20
	ternary  goto 37
	stmt_tryCatch  goto 10
	identifier  goto 41
	goToLabel  goto 35

state 26
	global_variables:  opt_directive.Var identifiers opt_export semicolon 
	funcProc:  opt_directive.Function Identifier '(' declarations_method_params ')' opt_export $$12 opt_explicit_variables opt_body EndFunction 
	funcProc:  opt_directive.Procedure Identifier '(' declarations_method_params ')' opt_export opt_explicit_variables opt_body EndProcedure 

	Procedure  shift 81
	Var  shift 79
	Function  shift 80
	.  error


state 27
	simple_expr:  String.    (93)

	.  reduce 93 (src line 346)


state 28
	simple_expr:  Number.    (94)

	.  reduce 94 (src line 347)


state 29
	simple_expr:  '-'.expr 

	Identifier  shift 43
	Not  shift 19
	GoToLabel  shift 40
	Number  shift 28
	String  shift 27
	New  shift 38
	True  shift 31
	False  shift 32
	Undefind  shift 34
	Date  shift 33
	GoTo  shift 21
	Execute  shift 44
	BuiltinFunction  shift 45
	'+'  shift 30
	'-'  shift 29
	'('  shift 18
	'?'  shift 42
	.  error

	expr  goto 82
	simple_expr  goto 17
	through_dot  goto 36
	new_object  goto 20
	ternary  goto 37
	identifier  goto 41
	goToLabel  goto 35

state 30
	simple_expr:  '+'.expr 

	Identifier  shift 43
	Not  shift 19
	GoToLabel  shift 40
	Number  shift 28
	String  shift 27
	New  shift 38
	True  shift 31
	False  shift 32
	Undefind  shift 34
	Date  shift 33
	GoTo  shift 21
	Execute  shift 44
	BuiltinFunction  shift 45
	'+'  shift 30
	'-'  shift 29
	'('  shift 18
	'?'  shift 42
	.  error

	expr  goto 83
	simple_expr  goto 17
	through_dot  goto 36
	new_object  goto 20
	ternary  goto 37
	identifier  goto 41
	goToLabel  goto 35

state 31
	simple_expr:  True.    (97)

	.  reduce 97 (src line 350)


state 32
	simple_expr:  False.    (98)

	.  reduce 98 (src line 351)


state 33
	simple_expr:  Date.    (99)

	.  reduce 99 (src line 352)


state 34
	simple_expr:  Undefind.    (100)

	.  reduce 100 (src line 353)


state 35
	simple_expr:  goToLabel.    (101)

	.  reduce 101 (src line 354)


state 36
	through_dot:  through_dot.dot identifier 
	simple_expr:  through_dot.    (102)

	'.'  shift 85
	.  reduce 102 (src line 355)

	dot  goto 84

state 37
	simple_expr:  ternary.    (103)

	.  reduce 103 (src line 362)


state 38
	new_object:  New.Identifier 
	new_object:  New.Identifier '(' exprs ')' 
	new_object:  New.'(' exprs ')' 

	Identifier  shift 86
	'('  shift 87
	.  error


state 39
	opt_directive:  Directive.    (8)

	.  reduce 8 (src line 120)


state 40
	goToLabel:  GoToLabel.    (104)

	.  reduce 104 (src line 365)


state 41
	through_dot:  identifier.    (52)
	identifier:  identifier.'[' expr ']' 

	'['  shift 88
	.  reduce 52 (src line 278)


state 42
	ternary:  '?'.'(' expr comma expr comma expr ')' 

	'('  shift 89
	.  error


state 43
	identifier:  Identifier.    (54)
	identifier:  Identifier.'(' exprs ')' 

	'('  shift 90
	.  reduce 54 (src line 285)


state 44
	identifier:  Execute.execute_param 
	identifier:  Execute.'(' expr ')' 

	Identifier  shift 94
	String  shift 93
	'('  shift 92
	.  error

	execute_param  goto 91

state 45
	identifier:  BuiltinFunction.'(' exprs ')' 

	'('  shift 95
	.  error


state 46
	module:  main_items opt_body.    (2)
	body:  opt_body.separator opt_stmt 

	':'  shift 53
	';'  shift 52
	.  reduce 2 (src line 97)

	separator  goto 49
	semicolon  goto 50
	colon  goto 51

state 47
	main_items:  main_items main.    (4)

	.  reduce 4 (src line 104)


state 48
	opt_body:  body.    (16)

	.  reduce 16 (src line 152)


state 49
	body:  opt_body separator.opt_stmt 
	opt_stmt: .    (19)

	Identifier  shift 43
	If  shift 22
	For  shift 23
	Break  shift 12
	Not  shift 19
	While  shift 24
	GoToLabel  shift 40
	Continue  shift 11
	Try  shift 25
	Number  shift 28
	String  shift 27
	New  shift 38
	Return  shift 14
	Throw  shift 13
	True  shift 31
	False  shift 32
	Undefind  shift 34
	Date  shift 33
	GoTo  shift 21
	Execute  shift 44
	BuiltinFunction  shift 45
	'+'  shift 30
	'-'  shift 29
	'('  shift 18
	'?'  shift 42
	.  reduce 19 (src line 170)

	stmt  goto 97
	stmt_loop  goto 9
	stmt_if  goto 8
	opt_stmt  goto 96
	expr  goto 7
	simple_expr  goto 17
	through_dot  goto 36
	new_object  goto 20
	ternary  goto 37
	stmt_tryCatch  goto 10
	identifier  goto 41
	goToLabel  goto 35

state 50
	separator:  semicolon.    (21)

	.  reduce 21 (src line 174)


state 51
	separator:  colon.    (22)

	.  reduce 22 (src line 174)


state 52
	semicolon:  ';'.    (109)

	.  reduce 109 (src line 375)


state 53
	colon:  ':'.    (110)

	.  reduce 110 (src line 376)


state 54
	expr:  expr '+'.expr 

	Identifier  shift 43
	Not  shift 19
	GoToLabel  shift 40
	Number  shift 28
	String  shift 27
	New  shift 38
	True  shift 31
	False  shift 32
	Undefind  shift 34
	Date  shift 33
	GoTo  shift 21
	Execute  shift 44
	BuiltinFunction  shift 45
	'+'  shift 30
	'-'  shift 29
	'('  shift 18
	'?'  shift 42
	.  error

	expr  goto 98
	simple_expr  goto 17
	through_dot  goto 36
	new_object  goto 20
	ternary  goto 37
	identifier  goto 41
	goToLabel  goto 35

state 55
	expr:  expr '-'.expr 

	Identifier  shift 43
	Not  shift 19
	GoToLabel  shift 40
	Number  shift 28
	String  shift 27
	New  shift 38
	True  shift 31
	False  shift 32
	Undefind  shift 34
	Date  shift 33
	GoTo  shift 21
	Execute  shift 44
	BuiltinFunction  shift 45
	'+'  shift 30
	'-'  shift 29
	'('  shift 18
	'?'  shift 42
	.  error

	expr  goto 99
	simple_expr  goto 17
	through_dot  goto 36
	new_object  goto 20
	ternary  goto 37
	identifier  goto 41
	goToLabel  goto 35

state 56
	expr:  expr '*'.expr 

	Identifier  shift 43
	Not  shift 19
	GoToLabel  shift 40
	Number  shift 28
	String  shift 27
	New  shift 38
	True  shift 31
	False  shift 32
	Undefind  shift 34
	Date  shift 33
	GoTo  shift 21
	Execute  shift 44
	BuiltinFunction  shift 45
	'+'  shift 30
	'-'  shift 29
	'('  shift 18
	'?'  shift 42
	.  error

	expr  goto 100
	simple_expr  goto 17
	through_dot  goto 36
	new_object  goto 20
	ternary  goto 37
	identifier  goto 41
	goToLabel  goto 35

state 57
	expr:  expr '/'.expr 

	Identifier  shift 43
	Not  shift 19
	GoToLabel  shift 40
	Number  shift 28
	String  shift 27
	New  shift 38
	True  shift 31
	False  shift 32
	Undefind  shift 34
	Date  shift 33
	GoTo  shift 21
	Execute  shift 44
	BuiltinFunction  shift 45
	'+'  shift 30
	'-'  shift 29
	'('  shift 18
	'?'  shift 42
	.  error

	expr  goto 101
	simple_expr  goto 17
	through_dot  goto 36
	new_object  goto 20
	ternary  goto 37
	identifier  goto 41
	goToLabel  goto 35

state 58
	expr:  expr '%'.expr 

	Identifier  shift 43
	Not  shift 19
	GoToLabel  shift 40
	Number  shift 28
	String  shift 27
	New  shift 38
	True  shift 31
	False  shift 32
	Undefind  shift 34
	Date  shift 33
	GoTo  shift 21
	Execute  shift 44
	BuiltinFunction  shift 45
	'+'  shift 30
	'-'  shift 29
	'('  shift 18
	'?'  shift 42
	.  error

	expr  goto 102
	simple_expr  goto 17
	through_dot  goto 36
	new_object  goto 20
	ternary  goto 37
	identifier  goto 41
	goToLabel  goto 35

state 59
	expr:  expr '>'.expr 

	Identifier  shift 43
	Not  shift 19
	GoToLabel  shift 40
	Number  shift 28
	String  shift 27
	New  shift 38
	True  shift 31
	False  shift 32
	Undefind  shift 34
	Date  shift 33
	GoTo  shift 21
	Execute  shift 44
	BuiltinFunction  shift 45
	'+'  shift 30
	'-'  shift 29
	'('  shift 18
	'?'  shift 42
	.  error

	expr  goto 103
	simple_expr  goto 17
	through_dot  goto 36
	new_object  goto 20
	ternary  goto 37
	identifier  goto 41
	goToLabel  goto 35

state 60
	expr:  expr '<'.expr 

	Identifier  shift 43
	Not  shift 19
	GoToLabel  shift 40
	Number  shift 28
	String  shift 27
	New  shift 38
	True  shift 31
	False  shift 32
	Undefind  shift 34
	Date  shift 33
	GoTo  shift 21
	Execute  shift 44
	BuiltinFunction  shift 45
	'+'  shift 30
	'-'  shift 29
	'('  shift 18
	'?'  shift 42
	.  error

	expr  goto 104
	simple_expr  goto 17
	through_dot  goto 36
	new_object  goto 20
	ternary  goto 37
	identifier  goto 41
	goToLabel  goto 35

state 61
	expr:  expr '='.expr 

	Identifier  shift 43
	Not  shift 19
	GoToLabel  shift 40
	Number  shift 28
	String  shift 27
	New  shift 38
	True  shift 31
	False  shift 32
	Undefind  shift 34
	Date  shift 33
	GoTo  shift 21
	Execute  shift 44
	BuiltinFunction  shift 45
	'+'  shift 30
	'-'  shift 29
	'('  shift 18
	'?'  shift 42
	.  error
